# entity-linking-test-task-review

./: .gitignore  README.md  Untitled.ipynb  convert_dataset.py  converting_data.py  pyproject.toml  smt.py  test_converting_data.py  test_seen_entities.jsonl  test_seen_entities.parquet  test_seen_mentions.parquet  test_seen_texts.parquet  unit_test_entities.parquet  unit_test_mentions.parquet  unit_test_texts.parquet
