[tool.poetry]
name = "entity-linking-test-task-review"
version = "0.1.0"
description = ""
authors = [
    "Max Ermakov <maksim_ermakov@protonmail.com>", 
    "thatfoox <example@mail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
typer = "^0.9.0"
pyarrow = "^12.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"